--- a/r2/r2/templates/captcha.html
+++ b/r2/r2/templates/captcha.html
@@ -58,7 +58,7 @@ ${captchagen(thing.iden, thing.error)}
      </td>
      <td>
      %endif
-        <input id="capiden" name="iden" type="hidden" value="${iden}"></input>
+        <input id="capiden" name="iden" type="hidden" value="${iden}"/>
         <input id="captcha" name="captcha" type="text" size="${size}" 
                class="cap-text" onfocus="clearTitle(this)"/>
         <script type="text/javascript">
