--- a/r2/r2/templates/button.html
+++ b/r2/r2/templates/button.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -19,27 +19,17 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
-
-<%inherit file="base.html"/>
+<%!
+   from r2.lib.template_helpers import get_domain, static
+   from r2.lib.utils import query_string
+ %>
+<%inherit file="reddit.html"/>
 <%namespace module="r2.lib.template_helpers" import="generateurl"/>
 <%namespace file="printable.html" import="arrow, score" />
 
 
 
-<%def name="stylesheet()">
-  <% from r2.lib.template_helpers import static %>
-  <link rel='stylesheet' href="${static(g.stylesheet)}" type="text/css" />
-  %if c.site.stylesheet:
-    <link rel='stylesheet' href="${static(c.site.stylesheet)}" type="text/css" />
-  %endif
-
-  %if thing.css:
-    <link rel='stylesheet' href="${thing.css}" type="text/css" />
-  %endif
-</%def>
-
 <%def name="javascript()">
-  <% from r2.lib.template_helpers import static %>
   <script src="${static('vote.js')}"  type="text/javascript"></script>
   <script type="text/javascript">
     function showcover() { show("cover"); }
@@ -48,7 +38,7 @@
 
 
 
-<%def name="body()">
+<%def name="bodyHTML()">
   <body>
     <div class="button">
     %if not c.user_is_loggedin:
@@ -72,7 +62,7 @@
 </%def>
 
 <%def name="submiturl(url, title='')">
-  ${generateurl("http://%s/submit" % c.domain, url=url, title=title)}
+  ${("http://%s/submit" % get_domain(True)) + query_string(dict(url=url, title=title))}
 </%def>
 
 <%def name="submitlink(url, title='', text='submit')">
