--- a/r2/r2/templates/frame.html
+++ b/r2/r2/templates/frame.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -19,6 +19,9 @@
 ## All portions of the code written by CondeNet are Copyright (c) 2006-2008
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
+<%
+   from r2.lib.template_helpers import add_sr
+ %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
@@ -26,8 +29,7 @@
     <title>${thing.title}</title>
   </head>
   <frameset framespacing="0" rows="30px, 100%">
-    <frame frameborder="0" scrolling="no" 
-           src="/toolbar?id=${thing.fullname}"/>
+    <frame frameborder="0" scrolling="no" src="${add_sr('/toolbar?id=' + thing.fullname)}"/>
     <frame frameborder="0" src="${thing.url}"/>
   </frameset>
 </html>
