--- a/r2/r2/templates/over18.html
+++ b/r2/r2/templates/over18.html
@@ -1,4 +1,4 @@
-## "The contents of this file are subject to the Common Public Attribution
+## The contents of this file are subject to the Common Public Attribution
 ## License Version 1.0. (the "License"); you may not use this file except in
 ## compliance with the License. You may obtain a copy of the License at
 ## http://code.reddit.com/LICENSE. The License is based on the Mozilla Public
@@ -26,7 +26,8 @@
   </p>
   <img src="/static/over18.png" alt="jedberg alien" />
   
-  <form method="post" action="" class="pretty-form">
+  <form method="post" action="" class="pretty-form"
+      ${"target='_top'" if c.cname else ""}>
     <input type="hidden" name="uh" value="${c.modhash}" />
     <p>
       ${_("are you over eighteen and willing to see adult content?")}
